[metadata]
# replace with your username:
name = torch gists
version = 0.0.1
author = Rishikanth
author_email = r3chandr@ucsd.edu
description = A collection of models and utilities for pytorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rishikanthc/torch-gists
project_urls =
    Bug Tracker = https://github.com/rishikanthc/torch-gists/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = torch_gists
packages = find:
python_requires = >=3.6

[options.packages.find]
where = torch_gists